--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -164,6 +164,16 @@
               Login
             </a>
           </li>
+          <li>
+            <a
+              routerLink="auth/signup"
+              routerLinkActive="active-link"
+              [routerLinkActiveOptions]="{ exact: true }"
+            >
+              <!--<fa-icon [icon]="faSignInAlt" class="user-icon"> </fa-icon>&nbsp;-->
+              Sign Up
+            </a>
+          </li>
         </ng-container>
       </ul>
     </nav><!--</ng-container
