--- a/client/src/app/modules/auth/login/login.component.html
+++ b/client/src/app/modules/auth/login/login.component.html
@@ -8,6 +8,7 @@
         <!--<a href="auth/signup" class="signup-link">Sign Up</a>-->
         <a
           routerLink="../signup"
+          class="signup-link"
           >Sign Up</a>
       </p>
     </div>
