Home page recipes & shared module

--- a/client/src/app/modules/auth/signup/signup.component.html
+++ b/client/src/app/modules/auth/signup/signup.component.html
@@ -83,12 +83,12 @@
         <h4 class="block mgb1">Upload profile image</h4>
         <div class="upload flex">
           <div class="buttons flex">
-            <label for="image" class="upload-btn-wrapper hovEffect">
+            <label for="image" class="upload-btn-wrapper hover-effect">
               <input type="file" id="image" />
               Browse image
             </label>
             <button
-              class="cancelBtn hovEffect"
+              class="cancelBtn hover-effect"
             >
               Cancel image
             </button>
