single result page & resolver

--- a/client/src/styles/base/_utilities.scss
+++ b/client/src/styles/base/_utilities.scss
@@ -9,7 +9,7 @@
     $align: center,
     $textAlign: center
   );
-  //padding: 1rem;
+  padding: 1rem;
   flex: 1;
   flex: 1 1 auto;
   overflow: auto;
