--- a/client/src/app/modules/recipe-details/recipe/recipe.component.html
+++ b/client/src/app/modules/recipe-details/recipe/recipe.component.html
@@ -1,196 +1,155 @@
+<div class="single-result-container container">
+  <!-- place for Search form component -->
 
-<div class="singleResultContainer container">
-    
-      <!-- place for Search form component -->
+  <div class="single-result-wrapper">
+    <h1>{{ recipe.mealName | sentenceCase }}</h1>
+    <section class="favorites flex">
+      <div class="message-wrapper center">
+        <!-- Place for Info message component -->
+      </div>
+      <button class="add-favorites">
+        Add to favorites &nbsp;
+        <span>
+          <fa-icon [icon]="['fas', 'plus']" class="plus"></fa-icon>
+        </span>
+      </button>
 
-    <div class="singleResultWrapper" *ngIf="recipe">
-      <h1>{{ recipe.mealName }}</h1>
-      <section class="favorites flex">
-        <div class="messageWrapper center">
-          
-            <!-- Place for Info message component -->
+      <div
+        [ngClass]="
+          disableRecipeSaving ? 'changable-save' : 'changable-save heart'
+        "
+      >
+        <!-- <span *ngIf="!disableRecipeSaving">Recipe saved</span> -->
+      </div>
 
-        </div>
-        <button
-          class="addToFavorites hovEffect"
-        >
-          Add to favorites &nbsp;
-          <span>
-            <!-- <font-awesome-icon :icon="['fas', 'plus']" class="plus">
-            </font-awesome-icon> -->
-            +
-          </span>
-        </button>
-        
-          <!-- <div
-            :class="
-              disableRecipeSaving ? 'changableSave' : 'changableSave heart'
-            "
-          >
-            <span>Recipe saved</span>
-          </div> -->
+      <!-- Place foir Rating component -->
 
-        
-          <!-- Place foir Rating component -->
-
-       
-          <p class="userRating flex flexCenter">
-            Your rate:<span><!-- {{ userRate }} --></span
-            ><!-- <font-awesome-icon :icon="['fas', 'star']" class="starIcon">
-            </font-awesome-icon> -->
-          </p>
-
-      </section>
-      <section class="basicInfo flex mgb1">
-        <span class="info tooltipContainer"
-          ><!-- <font-awesome-icon :icon="['fas', 'weight']" class="mealIcons">
-          </font-awesome-icon> -->
-          {{ recipe.level }}
-        <!-- <app-tooltip tooltipText="Level of difficulty"></app-tooltip> -->
-    </span>
-        <span class="info tooltipContainer"
-          ><!-- <font-awesome-icon :icon="['fas', 'user']" class="mealIcons">
-          </font-awesome-icon> -->
-          {{ recipe.persons }}
-        <!-- <app-tooltip tooltipText="Number of persons"></app-tooltip> -->
-    
-    </span>
-        <span class="info tooltipContainer"
-          ><!-- <font-awesome-icon
-            :icon="['far', 'clock']"
-            class="mealIcons"
-          ></font-awesome-icon> -->
-          {{ recipe.timing }}
-        <!-- <app-tooltip tooltipText="Preparation time"></app-tooltip> -->
-    </span>
-      </section>
-      <figure class="mgb1">
-          <ng-container *ngIf="recipe.image === undefined">
+      <p class="user-rating flex flex-center">
+        Your rate:<span>{{ userRate() }}</span>
+        <fa-icon [icon]="['fas', 'star']" class="star-icon"></fa-icon>
+      </p>
+    </section>
+    <section class="basic-info flex mgb1">
+      <span class="info tooltip-container">
+        <fa-icon [icon]="['fas', 'weight']" class="meal-icons"></fa-icon>
+        {{ recipe.level }}
+        <app-tooltip tooltipText="Level of difficulty"></app-tooltip>
+      </span>
+      <span class="info tooltip-container">
+        <fa-icon [icon]="['fas', 'weight']" class="meal-icons"></fa-icon>
+        {{ recipe.persons }}
+        <app-tooltip tooltipText="Number of persons"></app-tooltip>
+      </span>
+      <span class="info tooltip-container">
+        <fa-icon [icon]="['fas', 'clock']" class="meal-icons"></fa-icon>
+        {{ recipe.timing }}
+        <app-tooltip tooltipText="Preparation time"></app-tooltip>
+      </span>
+    </section>
+    <figure class="mgb1">
+      <ng-container *ngIf="recipe.image === undefined">
         <img
           src="../../../../assets/images/default_recipe.jpg"
           [alt]="recipe.mealName"
           loading="lazy"
         />
-    </ng-container>
-    <ng-container *ngIf="recipe.image">
-        <img
-          [src]="recipe.image.url"
-          [alt]="recipe.mealName"
-          loading="lazy"
-        />
-    </ng-container>
-      </figure>
-      <section class="underImage flex mgb1">
-        <div class="userInfoRating flex mgb1">
-          <button
-            class="userInfo tooltipContainer"
-          >
-            <p class="flex flexCenter">
-                <ng-container *ngIf="recipe.author.user_image === undefined">
+      </ng-container>
+      <ng-container *ngIf="recipe.image">
+        <img [src]="recipe.image.url" [alt]="recipe.mealName" loading="lazy" />
+      </ng-container>
+    </figure>
+    <section class="under-image flex mgb1">
+      <div class="user-info-rating flex mgb1">
+        <button class="user-info tooltip-container">
+          <p class="flex flex-center">
+            <ng-container *ngIf="recipe.author.user_image === undefined">
               <img
                 src="../../../../assets/images/default_user.png"
                 alt="user image"
-                class="authorImage"
+                class="author-image"
                 loading="lazy"
               />
             </ng-container>
-              <ng-container *ngIf="recipe.author.user_image.url">
+            <ng-container *ngIf="recipe.author.user_image.url">
               <img
                 [src]="recipe.author.user_image.url"
                 alt="user image"
-                class="authorImage"
+                class="author-image"
                 loading="lazy"
               />
             </ng-container>
-              <span class="authorUsername">{{
-                recipe.author.username
-              }}</span>
-            </p>
-            <!-- <app-tooltip tooltipText="See user s recipes"></app-tooltip> -->
-          </button>
-          <p class="rating">
-            <!-- <font-awesome-icon :icon="['fa', 'star']" class="starIcon">
-            </font-awesome-icon
-            > -->&nbsp;&nbsp;{{ recipe.rating }} /
-            <span class="lightItalic"><!-- {{
-              recipe.rates.length
-                ? recipe.rates.length + ' votes'
-                : 'not rated'
-            }} -->
-            <ng-container *ngIf="recipe.rates.length">*** votes</ng-container>
-            <ng-container  *ngIf="!recipe.rates.length">not rated</ng-container>
-        </span>
+            <span class="author-username">{{ recipe.author.username }}</span>
           </p>
-        </div>
-        <span class="recipeDate">{{
-          recipe.createdAt 
-        }}</span>
-        <p class="intro lightItalic">{{ recipe.intro }}</p>
-      </section>
-      <section class="additionalInfo flex mgb1">
-        <p class="mgb1">
-          <span class="slim">Vegetarian: </span>
-          <!-- <font-awesome-icon
-            :icon="
-              recipe.vegetarian ? ['fas', 'check'] : ['fas', 'times']
-            "
-            :class="
-              recipe.vegetarian
-                ? 'additionalIcons check'
-                : 'additionalIcons times'
-            "
-          ></font-awesome-icon> -->
+          <app-tooltip tooltipText="See user s recipes"></app-tooltip>
+        </button>
+        <p class="rating">
+          <fa-icon [icon]="['fas', 'star']" class="meal-icons"></fa-icon>
+          &nbsp;&nbsp;{{ recipe.rating }} /
+          <span class="light-italic"
+            >{{
+              recipe.rates.length ? recipe.rates.length + " votes" : "not rated"
+            }}
+          </span>
         </p>
-        <p class="mgb1">
-          <span class="slim">Gluten Free: </span
-          ><!-- <font-awesome-icon
-            :icon="
-              recipe.glutenFree ? ['fas', 'check'] : ['fas', 'times']
-            "
-            :class="
-              recipe.glutenFree
-                ? 'additionalIcons check'
-                : 'additionalIcons times'
-            "
-          ></font-awesome-icon> -->
-        </p>
-        <!-- <p *ngIf="recipe.regional" class="mgb1">
-          <span class="slim">Regional: </span
-          >{{ recipe.regional | titleCase }}
-        </p>
-        <p class="mgb1">
-          <span class="slim">Dish Type: </span
-          >{{ recipe.dishType | titlecase }}
-        </p> -->
-      </section>
-      <!-- <section class="ingredients flex mgb1">
-        <h3 class="mgb1">Ingredients:</h3>
-        <ul class="flex">
-          <li
-          *ngFor="ingred of recipe.ingredients"
-            class="mgb1"
-          >
-            <span>{{ ingred.ingredient }}</span
-            ><span *ngIf="ingred.amount"> - </span>
-            <span> {{ ingred.amount }}</span>
-          </li>
-        </ul>
-      </section> -->
-      <!-- <section class="directions flex mgb1">
-        <h3 class="mgb1">Directions:</h3>
-        <ol class="flex">
-          <li
-            *ngFor="let st of steps; let i = index;"
-            [data-number]="i + 1"
-            class="mgb1"
-          >
-            <p>{{ st.step }}</p>
-          </li>
-        </ol>
-      </section> -->
+      </div>
+      <span class="recipe-date">Created at: {{ recipe.createdAt | date }}</span>
+      <p class="intro light-italic">{{ recipe.intro }}</p>
+    </section>
+    <section class="additional-info flex mgb1">
+      <p class="mgb1">
+        <span class="slim">Vegetarian: </span>
+        <fa-icon
+          [icon]="recipe.vegetarian ? ['fas', 'check'] : ['fas', 'times']"
+          [ngClass]="
+            recipe.vegetarian
+              ? 'additional-icons check'
+              : 'additional-icons times'
+          "
+        ></fa-icon>
+      </p>
+      <p class="mgb1">
+        <span class="slim">Gluten Free: </span>
+        <fa-icon
+          [icon]="recipe.glutenFree ? ['fas', 'check'] : ['fas', 'times']"
+          [ngClass]="
+            recipe.glutenFree
+              ? 'additional-icons check'
+              : 'additional-icons times'
+          "
+        ></fa-icon>
+      </p>
+      <p *ngIf="recipe.regional" class="mgb1">
+        <span class="slim">Regional: </span>{{ recipe.regional | sentenceCase }}
+      </p>
+      <p class="mgb1">
+        <span class="slim">Dish Type: </span
+        >{{ recipe.dishType | sentenceCase }}
+      </p>
+    </section>
+    <section class="ingredients flex mgb1">
+      <h3 class="mgb1">Ingredients:</h3>
+      <ul class="flex">
+        <li *ngFor="let ing of recipe.ingredients" class="mgb1">
+          <span>{{ ing.ingredient }}</span
+          ><span *ngIf="ing.amount"> - </span>
+          <span> {{ ing.amount }}</span>
+        </li>
+      </ul>
+    </section>
+    <section class="directions flex mgb1">
+      <h3 class="mgb1">Directions:</h3>
+      <ol class="flex">
+        <li
+          *ngFor="let st of recipe.steps; let i = index"
+          [attr.data-number]="i + 1"
+          class="mgb1"
+        >
+          <p>{{ st.step }}</p>
+        </li>
+      </ol>
+    </section>
 
-      <!-- Comments -->
-
-    </div>
-    <!-- Loader ? -->
+    <!-- Comments -->
   </div>
+  <!-- Loader ? -->
+</div>
