--- a/client/src/app/modules/recipe-details/recipe/recipe.component.scss
+++ b/client/src/app/modules/recipe-details/recipe/recipe.component.scss
@@ -2,7 +2,7 @@
   "../../../../styles/abstracts/mixins.scss",
   "../../../../styles/abstracts/functions.scss";
 
-.singleResultWrapper {
+.single-result-wrapper {
     @include alignment($display: flex, $justify: center, $align: center);
     flex-direction: column;
     @include box-size($width: 100%);
@@ -32,11 +32,11 @@
     .favorites {
       @include alignment($align: center);
       flex-wrap: wrap;
-      .addToFavorites,
-      .changableSave {
+      .add-favorites,
+      .changable-save {
         @include box-size($width: 140px, $height: 40px);
       }
-      .addToFavorites {
+      .add-favorites {
         @include fonts($color: $light, $size: 0.9rem);
         @include alignment($display: inline-block);
         background-color: #f1b3b3;
@@ -56,7 +56,7 @@
         }
       }
       // save recipe style
-      .changableSave {
+      .changable-save {
         &.heart {
           position: relative;
           @include box-size($width: 100px, $height: 40px);
@@ -85,11 +85,11 @@
         }
       }
       // end save
-      .userRating {
+      .user-rating {
         @include box-size($height: 40px);
         @include fonts($size: 0.9rem, $color: lighten($graphite, 20%));
         span,
-        .starIcon {
+        .star-icon {
           margin-left: 0.3rem;
         }
         span {
@@ -97,18 +97,18 @@
           text-shadow: #706f6f 1px 1px 0;
         }
       }
-      .messageWrapper {
+      .message-wrapper {
         @include box-size($width: 100%, $height: 40px);
       }
     }
-    .basicInfo {
+    .basic-info {
       @include alignment($direction: row);
       @include fonts($color: $graphite);
       padding: 0.8rem;
       .info {
         margin-right: 1rem;
       }
-      .mealIcons {
+      .meal-icons {
         color: gray;
         margin-right: 0.2rem;
       }
@@ -120,23 +120,23 @@
         @include box-size($width: 100%, $height: 100%);
       }
     }
-    .underImage {
+    .under-image {
       @include box-size($width: 100%);
-      .userInfoRating {
+      .user-info-rating {
         @include box-size($width: 100%);
         @include alignment($justify: space-between, $align: center);
-        .userInfo {
+        .user-info {
           display: block;
           background-color: transparent;
           color: #a3865b;
         }
-        .authorImage {
+        .author-image {
           @include box-size($width: 40px, $height: 40px);
           border-radius: 50%;
           margin-right: 0.5rem;
         }
       }
-      .recipeDate {
+      .recipe-date {
         @include fonts($size: 0.8rem, $color: gray);
       }
       .intro {
@@ -147,9 +147,9 @@
         margin-top: 0.7rem;
       }
     }
-    .additionalInfo {
+    .additional-info {
       @include fonts($size: 0.9rem);
-      .additionalIcons {
+      .additional-icons {
         margin-left: 0.5rem;
         &.check {
           color: rgba(0, 128, 0, 0.733);
@@ -201,7 +201,7 @@
     }
   }
   @media (min-width: 576px) {
-    .singleResultWrapper {
+    .single-result-wrapper {
       @include box-size($width: 550px);
       figure {
         @include box-size($width: 500px);
@@ -209,20 +209,20 @@
     }
   }
   @media (min-width: 768px) {
-    .singleResultWrapper {
+    .single-result-wrapper {
       .favorites {
         @include alignment($direction: row, $justify: space-evenly);
-        .addToFavorites {
+        .add-favorites {
           margin-bottom: 0;
         }
       }
     }
   }
   @media (min-width: 992px) {
-    .singleResultContainer {
+    .single-result-container {
       background-image: $zinc;
     }
-    .singleResultWrapper {
+    .single-result-wrapper {
       @include box-size($width: 900px, $max-width: initial);
       @include alignment($display: grid);
       padding: 1rem;
@@ -238,20 +238,20 @@
       .favorites {
         grid-area: favorites;
       }
-      .basicInfo {
+      .basic-info {
         grid-area: basicInfo;
       }
       figure {
         grid-area: photo;
         @include box-size($height: 400px, $width: 600px);
       }
-      .underImage {
+      .under-image {
         grid-area: underImage;
-        .userInfoRating {
+        .user-info-rating {
           @include box-size($width: 65%);
         }
       }
-      .additionalInfo {
+      .additional-info {
         grid-area: additionalInfo;
         border: none;
         align-self: start;
