--- a/client/src/app/modules/shared/components/loader/loader.component.scss
+++ b/client/src/app/modules/shared/components/loader/loader.component.scss
@@ -1,6 +1,6 @@
-@import "../../../../styles/abstracts/variables.scss",
-  "../../../../styles/abstracts/mixins.scss",
-  "../../../../styles/abstracts/functions.scss";
+@import "../../../../../styles/abstracts/variables.scss",
+  "../../../../../styles/abstracts/mixins.scss",
+  "../../../../../styles/abstracts/functions.scss";
 
 .progress {
     position: relative;
