--- a/client/src/app/modules/shared/components/query-recipe/query-recipe.component.scss
+++ b/client/src/app/modules/shared/components/query-recipe/query-recipe.component.scss
@@ -1,6 +1,6 @@
-@import "../../../../styles/abstracts/variables.scss",
-  "../../../../styles/abstracts/mixins.scss",
-  "../../../../styles/abstracts/functions.scss";
+@import "../../../../../styles/abstracts/variables",
+  "../../../../../styles/abstracts/mixins.scss",
+  "../../../../../styles/abstracts/functions.scss";
 
 .recipe-link {
   @include box-size($width: 100%, $height: 430px);
