--- a/client/src/app/modules/recipe-details/rating/rating.component.scss
+++ b/client/src/app/modules/recipe-details/rating/rating.component.scss
@@ -101,8 +101,8 @@
         color: yellow;
       }
     }
-    .rateCounterWrapper {
-      @include fonts($color: white, $size: 0.8rem);
+    .rate-counter-wrapper {
+      @include fonts($color: $light, $size: 0.8rem);
       @include box-size($width: 15%, $height: 100%);
       background-color: #485563;
       border-radius: 0 0 6px 0;
