error handling & backToTop

--- a/client/src/app/modules/recipe-details/recipe/recipe.component.html
+++ b/client/src/app/modules/recipe-details/recipe/recipe.component.html
@@ -153,4 +153,7 @@
     <!-- Comments -->
   </div>
   <!-- Loader ? -->
+  <ng-container *ngIf="isLoading">
+    <app-loader [bigLoader]="true"></app-loader>
+  </ng-container>
 </div>
