--- a/client/src/app/modules/home/home-page/home-page.component.html
+++ b/client/src/app/modules/home/home-page/home-page.component.html
@@ -44,11 +44,17 @@
       ></app-query-recipe>
     </div>
   </div>
-  <button
+  <ng-container *ngIf="errorMessage">
+    <app-page-error [message]="errorMessage"></app-page-error>
+  </ng-container>
+  <ng-container *ngIf="isLoading">
+    <app-loader [bigLoader]="true"></app-loader>
+  </ng-container>
+  <!-- <button
     (click)="hashScrollService.onBackToTop('homeContainer')"
     class="block hash-link"
     *ngIf="recipes.length"
   >
     <fa-icon [icon]="['fas', 'chevron-circle-up']"></fa-icon>To top
-  </button>
+  </button> -->
 </div>
