rating fuctionality, update data & comments

--- a/client/src/app/components/back-to-top/back-to-top.component.scss
+++ b/client/src/app/components/back-to-top/back-to-top.component.scss
@@ -13,9 +13,9 @@
   background-color: $golden;
   border-radius: 50%;
   font-size: 2rem;
-  transition: opacity 500ms;
+  transition: visibility 500ms;
 }
 
 .invisible {
-  opacity: 0;
+  visibility: hidden;
 }
