--- a/client/src/app/modules/recipe-details/rating/rating.component.html
+++ b/client/src/app/modules/recipe-details/rating/rating.component.html
@@ -34,7 +34,7 @@
         </label>
       </div>
       <div class="rate-counter-wrapper flex flex-center">
-        <span class="rate-counter">{{ rateValue }}/10</span>
+        <span class="rate-counter">{{ counter }}/10</span>
       </div>
     </div>
   </div>
