--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -3,7 +3,7 @@
 $light: #fff;
 $graphite: #333;
 $golden: #a3865b;
-$lightgray: #eee;
+$lightgray: lightgray;
 $star-color: rgba(236, 214, 13, 0.973);
 
 // gradients
