--- a/client/src/app/modules/recipe-details/rating/rating.component.scss
+++ b/client/src/app/modules/recipe-details/rating/rating.component.scss
@@ -65,7 +65,7 @@
     label {
       position: relative;
       @include box-size($width: 1.4rem, $height: 1.5rem);
-      color: lightgray;
+      color: $lightgray;
       input,
       span {
         position: absolute;
