--- a/client/src/app/modules/recipe-details/recipe/recipe.component.scss
+++ b/client/src/app/modules/recipe-details/recipe/recipe.component.scss
@@ -3,280 +3,280 @@
   "../../../../styles/abstracts/functions.scss";
 
 .single-result-wrapper {
-    @include alignment($display: flex, $justify: center, $align: center);
-    flex-direction: column;
+  @include alignment($display: flex, $justify: center, $align: center);
+  flex-direction: column;
+  @include box-size($width: 100%);
+  background-color: $light;
+  section,
+  figure,
+  h1 {
     @include box-size($width: 100%);
-    background-color: $light;
-    section,
-    figure,
-    h1 {
-      @include box-size($width: 100%);
+  }
+  section {
+    border-bottom: 1px inset $lightgray;
+    @include alignment($direction: column, $align: flex-start);
+    padding-bottom: 0.8rem;
+    font-size: 0.9rem;
+  }
+  img {
+    object-fit: cover;
+  }
+  h1 {
+    @include fonts($color: darken($golden, 5%), $weight: 800);
+    text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+    margin: 2rem auto;
+  }
+  h3 {
+    color: darken($golden, 5%);
+  }
+  .favorites {
+    @include alignment($align: center);
+    flex-wrap: wrap;
+    .add-favorites,
+    .changable-save {
+      @include box-size($width: 140px, $height: 40px);
     }
-    section {
-      border-bottom: 1px inset lightgray;
-      @include alignment($direction: column, $align: flex-start);
-      padding-bottom: 0.8rem;
-      font-size: 0.9rem;
+    .add-favorites {
+      @include fonts($color: $light, $size: 0.9rem);
+      @include alignment($display: inline-block);
+      background-color: #f1b3b3;
+      background-image: linear-gradient(
+        89.5deg,
+        rgba(246, 114, 128, 0.9) 0.2%,
+        rgba(248, 177, 149, 0.9) 90.6%
+      );
+      background-size: 600% 600%;
+      // animation: movingBackground 10s ease infinite;
+      margin-bottom: 1rem;
+      text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.82),
+        0px -1px 0px rgba(151, 146, 146, 0.67);
+      border-radius: 6px;
     }
+    // save recipe style
+    .changable-save {
+      &.heart {
+        position: relative;
+        @include box-size($width: 100px, $height: 40px);
+      }
+      &.heart:before,
+      &.heart:after {
+        position: absolute;
+        content: "";
+        left: 20px;
+        top: 0;
+        @include box-size($width: 20px, $height: 35px);
+        background: #ec476b;
+        border-radius: 50px 50px 0 0;
+        transform: rotate(-45deg);
+        transform-origin: 0 100%;
+      }
+      &.heart:after {
+        left: 0;
+        transform: rotate(45deg);
+        transform-origin: 100% 100%;
+      }
+      span {
+        position: absolute;
+        text-align: left;
+        @include fonts($size: 0.9rem, $color: lighten($graphite, 20%));
+      }
+    }
+    // end save
+    .user-rating {
+      @include box-size($height: 40px);
+      @include fonts($size: 0.9rem, $color: lighten($graphite, 20%));
+      span,
+      .star-icon {
+        margin-left: 0.3rem;
+      }
+      span {
+        @include fonts($color: lighten($graphite, 15%));
+        text-shadow: #706f6f 1px 1px 0;
+      }
+    }
+    .message-wrapper {
+      @include box-size($width: 100%, $height: 40px);
+    }
+  }
+  .basic-info {
+    @include alignment($direction: row);
+    @include fonts($color: $graphite);
+    padding: 0.8rem;
+    .info {
+      margin-right: 1rem;
+    }
+    .meal-icons {
+      color: gray;
+      margin-right: 0.2rem;
+    }
+  }
+  figure {
+    @include box-size($height: 270px);
+    box-shadow: $shadowSmall;
     img {
-      object-fit: cover;
+      @include box-size($width: 100%, $height: 100%);
+    }
+  }
+  .under-image {
+    @include box-size($width: 100%);
+    .user-info-rating {
+      @include box-size($width: 100%);
+      @include alignment($justify: space-between, $align: center);
+      .user-info {
+        display: block;
+        background-color: transparent;
+        color: #a3865b;
+      }
+      .author-image {
+        @include box-size($width: 40px, $height: 40px);
+        border-radius: 50%;
+        margin-right: 0.5rem;
+      }
+    }
+    .recipe-date {
+      @include fonts($size: 0.8rem, $color: gray);
+    }
+    .intro {
+      color: rgb(75, 72, 72);
+      text-align: left;
+    }
+    .intro {
+      margin-top: 0.7rem;
+    }
+  }
+  .additional-info {
+    @include fonts($size: 0.9rem);
+    .additional-icons {
+      margin-left: 0.5rem;
+      &.check {
+        color: rgba(0, 128, 0, 0.733);
+      }
+      &.times {
+        color: rgba(255, 0, 0, 0.699);
+      }
+    }
+  }
+  .ingredients {
+    h3 {
+      $color: darken($golden, 5%);
+    }
+    ul {
+      @include alignment($direction: column, $align: flex-start);
+      li {
+        @include fonts($color: rgb(75, 72, 72));
+        text-align: left;
+        &::before {
+          content: "\2726";
+          margin-right: 0.5rem;
+          //color: rgb(219, 86, 108);
+          color: $golden;
+        }
+      }
+    }
+  }
+  .directions {
+    ol {
+      @include alignment(
+        $direction: column,
+        $align: flex-start,
+        $textAlign: left
+      );
+      li {
+        @include fonts($color: rgb(75, 72, 72));
+        line-height: 1.5;
+        &::before {
+          content: attr(data-number) ".";
+          @include fonts($color: rgb(218, 113, 130), $weight: 800, $size: 2rem);
+          margin-right: 0.5rem;
+          line-height: 1.1;
+        }
+      }
+    }
+  }
+  .comments {
+    border-bottom: none;
+  }
+}
+@media (min-width: 576px) {
+  .single-result-wrapper {
+    @include box-size($width: 550px);
+    figure {
+      @include box-size($width: 500px);
+    }
+  }
+}
+@media (min-width: 768px) {
+  .single-result-wrapper {
+    .favorites {
+      @include alignment($direction: row, $justify: space-evenly);
+      .add-favorites {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+@media (min-width: 992px) {
+  .single-result-container {
+    background-image: $zinc;
+  }
+  .single-result-wrapper {
+    @include box-size($width: 900px, $max-width: initial);
+    @include alignment($display: grid);
+    padding: 1rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1.5fr;
+    grid-template-rows: repeat(7, auto);
+    grid-template-areas: "title title title title title" "favorites favorites favorites favorites favorites" "basicInfo basicInfo basicInfo basicInfo basicInfo" "photo photo photo photo additionalInfo" "underImage underImage underImage underImage underImage" "ingredients ingredients directions directions directions" "comments comments comments comments comments";
+    section {
+      font-size: 1rem;
     }
     h1 {
-      @include fonts($color: darken($golden, 5%), $weight: 800);
-      text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
-      margin: 2rem auto;
-    }
-    h3 {
-      color: darken($golden, 5%);
+      grid-area: title;
     }
     .favorites {
-      @include alignment($align: center);
-      flex-wrap: wrap;
-      .add-favorites,
-      .changable-save {
-        @include box-size($width: 140px, $height: 40px);
-      }
-      .add-favorites {
-        @include fonts($color: $light, $size: 0.9rem);
-        @include alignment($display: inline-block);
-        background-color: #f1b3b3;
-        background-image: linear-gradient(
-          89.5deg,
-          rgba(246, 114, 128, 0.9) 0.2%,
-          rgba(248, 177, 149, 0.9) 90.6%
-        );
-        background-size: 600% 600%;
-       // animation: movingBackground 10s ease infinite;
-        margin-bottom: 1rem;
-        text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.82),
-          0px -1px 0px rgba(151, 146, 146, 0.67);
-        border-radius: 6px;
-      }
-      // save recipe style
-      .changable-save {
-        &.heart {
-          position: relative;
-          @include box-size($width: 100px, $height: 40px);
-        }
-        &.heart:before,
-        &.heart:after {
-          position: absolute;
-          content: '';
-          left: 20px;
-          top: 0;
-          @include box-size($width: 20px, $height: 35px);
-          background: #ec476b;
-          border-radius: 50px 50px 0 0;
-          transform: rotate(-45deg);
-          transform-origin: 0 100%;
-        }
-        &.heart:after {
-          left: 0;
-          transform: rotate(45deg);
-          transform-origin: 100% 100%;
-        }
-        span {
-          position: absolute;
-          text-align: left;
-          @include fonts($size: 0.9rem, $color: lighten($graphite, 20%));
-        }
-      }
-      // end save
-      .user-rating {
-        @include box-size($height: 40px);
-        @include fonts($size: 0.9rem, $color: lighten($graphite, 20%));
-        span,
-        .star-icon {
-          margin-left: 0.3rem;
-        }
-        span {
-          @include fonts($color: lighten($graphite, 15%));
-          text-shadow: #706f6f 1px 1px 0;
-        }
-      }
-      .message-wrapper {
-        @include box-size($width: 100%, $height: 40px);
-      }
+      grid-area: favorites;
     }
     .basic-info {
-      @include alignment($direction: row);
-      @include fonts($color: $graphite);
-      padding: 0.8rem;
-      .info {
-        margin-right: 1rem;
-      }
-      .meal-icons {
-        color: gray;
-        margin-right: 0.2rem;
-      }
+      grid-area: basicInfo;
     }
     figure {
-      @include box-size($height: 270px);
-      box-shadow: $shadowSmall;
-      img {
-        @include box-size($width: 100%, $height: 100%);
-      }
+      grid-area: photo;
+      @include box-size($height: 400px, $width: 600px);
     }
     .under-image {
-      @include box-size($width: 100%);
+      grid-area: underImage;
       .user-info-rating {
-        @include box-size($width: 100%);
-        @include alignment($justify: space-between, $align: center);
-        .user-info {
-          display: block;
-          background-color: transparent;
-          color: #a3865b;
-        }
-        .author-image {
-          @include box-size($width: 40px, $height: 40px);
-          border-radius: 50%;
-          margin-right: 0.5rem;
-        }
-      }
-      .recipe-date {
-        @include fonts($size: 0.8rem, $color: gray);
-      }
-      .intro {
-        color: rgb(75, 72, 72);
-        text-align: left;
-      }
-      .intro {
-        margin-top: 0.7rem;
+        @include box-size($width: 65%);
       }
     }
     .additional-info {
-      @include fonts($size: 0.9rem);
-      .additional-icons {
-        margin-left: 0.5rem;
-        &.check {
-          color: rgba(0, 128, 0, 0.733);
-        }
-        &.times {
-          color: rgba(255, 0, 0, 0.699);
-        }
-      }
+      grid-area: additionalInfo;
+      border: none;
+      align-self: start;
+      font-size: 1.1rem;
+    }
+    .ingredients,
+    .directions {
+      border: none;
+      height: 100%;
+      margin-bottom: 0;
     }
     .ingredients {
-      h3 {
-        $color: darken($golden, 5%);
-      }
-      ul {
-        @include alignment($direction: column, $align: flex-start);
-        li {
-          @include fonts($color: rgb(75, 72, 72));
-          text-align: left;
-          &::before {
-            content: '\2726';
-            margin-right: 0.5rem;
-            //color: rgb(219, 86, 108);
-            color: $golden;
-          }
-        }
-      }
+      grid-area: ingredients;
+      padding: 0.8rem 0.8rem 0.8rem 0;
     }
     .directions {
-      ol {
-        @include alignment(
-          $direction: column,
-          $align: flex-start,
-          $textAlign: left
-        );
-        li {
-          @include fonts($color: rgb(75, 72, 72));
-          line-height: 1.5;
-          &::before {
-            content: attr(data-number) '.';
-            @include fonts($color: rgb(218, 113, 130), $weight: 800, $size: 2rem);
-            margin-right: 0.5rem;
-            line-height: 1.1;
-          }
+      grid-area: directions;
+      padding: 0.8rem 0 0.8rem 1.4rem;
+      ol li {
+        p {
+          line-height: 1.8;
         }
       }
     }
     .comments {
-      border-bottom: none;
+      grid-area: comments;
+      border-top: 1px solid $lightgray;
+      padding-top: 2rem;
     }
   }
-  @media (min-width: 576px) {
-    .single-result-wrapper {
-      @include box-size($width: 550px);
-      figure {
-        @include box-size($width: 500px);
-      }
-    }
-  }
-  @media (min-width: 768px) {
-    .single-result-wrapper {
-      .favorites {
-        @include alignment($direction: row, $justify: space-evenly);
-        .add-favorites {
-          margin-bottom: 0;
-        }
-      }
-    }
-  }
-  @media (min-width: 992px) {
-    .single-result-container {
-      background-image: $zinc;
-    }
-    .single-result-wrapper {
-      @include box-size($width: 900px, $max-width: initial);
-      @include alignment($display: grid);
-      padding: 1rem;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1.5fr;
-      grid-template-rows: repeat(7, auto);
-      grid-template-areas: 'title title title title title' 'favorites favorites favorites favorites favorites' 'basicInfo basicInfo basicInfo basicInfo basicInfo' 'photo photo photo photo additionalInfo' 'underImage underImage underImage underImage underImage' 'ingredients ingredients directions directions directions' 'comments comments comments comments comments';
-      section {
-        font-size: 1rem;
-      }
-      h1 {
-        grid-area: title;
-      }
-      .favorites {
-        grid-area: favorites;
-      }
-      .basic-info {
-        grid-area: basicInfo;
-      }
-      figure {
-        grid-area: photo;
-        @include box-size($height: 400px, $width: 600px);
-      }
-      .under-image {
-        grid-area: underImage;
-        .user-info-rating {
-          @include box-size($width: 65%);
-        }
-      }
-      .additional-info {
-        grid-area: additionalInfo;
-        border: none;
-        align-self: start;
-        font-size: 1.1rem;
-      }
-      .ingredients,
-      .directions {
-        border: none;
-        height: 100%;
-        margin-bottom: 0;
-      }
-      .ingredients {
-        grid-area: ingredients;
-        padding: 0.8rem 0.8rem 0.8rem 0;
-      }
-      .directions {
-        grid-area: directions;
-        padding: 0.8rem 0 0.8rem 1.4rem;
-        ol li {
-          p {
-            line-height: 1.8;
-          }
-        }
-      }
-      .comments {
-        grid-area: comments;
-        border-top: 1px solid lightgray;
-        padding-top: 2rem;
-      }
-    }
-  }
+}
