--- a/client/src/app/modules/home/home-page/home-page.component.html
+++ b/client/src/app/modules/home/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <app-slider [highestRatedRecipes]="highestRatedRecipes"></app-slider>
   </ng-container>
   <!-- Place for tags -->
-
+  <app-tags></app-tags>
   <!-- Latest recipes -->
   <div
     class="home-results-container flex flex-center mgt2"
