--- a/client/src/app/modules/comments/comments/comments.component.html
+++ b/client/src/app/modules/comments/comments/comments.component.html
@@ -1,10 +1,11 @@
-
-  <h2 class="mgb2">Comments:</h2>
-  <h4 *ngIf="!comments.length" class="light-italic mg1">Not Commented Yet</h4>
-  <ng-container *ngIf="comments.length">
-    <div *ngFor="let singleComment of comments" class="flex flex-center">
-      <app-comment [singleComment]="singleComment"></app-comment>
-    </div>
-  </ng-container>
-
-  <app-post-comment [recipeId]=recipeId (commentAdded)="updateComments()"></app-post-comment>
+<h2 class="mgb2">Comments:</h2>
+<h4 *ngIf="!comments.length" class="light-italic mg1">Not Commented Yet</h4>
+<ng-container *ngIf="comments.length">
+  <div *ngFor="let singleComment of comments" class="flex flex-center">
+    <app-comment [singleComment]="singleComment"></app-comment>
+  </div>
+</ng-container>
+<app-post-comment
+  [recipeId]="recipeId"
+  (commentAdded)="updateComments()"
+></app-post-comment>
