--- a/client/src/app/modules/recipe-details/recipe/recipe.component.html
+++ b/client/src/app/modules/recipe-details/recipe/recipe.component.html
@@ -77,7 +77,11 @@
     <!-- Under image - author info & recipe rating/created -->
     <section class="under-image flex mgb1">
       <div class="user-info-rating flex mgb1">
-        <button class="user-info tooltip-container">
+        <a
+          [routerLink]="['/results']"
+          [queryParams]="{ author: recipe.author._id }"
+          class="user-info tooltip-container"
+        >
           <p class="flex flex-center">
             <ng-container *ngIf="recipe.author.user_image === undefined">
               <img
@@ -98,7 +102,7 @@
             <span class="author-username">{{ recipe.author.username }}</span>
           </p>
           <app-tooltip tooltipText="See user s recipes"></app-tooltip>
-        </button>
+        </a>
         <p class="rating light-italic">
           <fa-icon [icon]="['fas', 'star']" class="star-icon"></fa-icon>
           &nbsp;&nbsp;{{ recipe.rating }} /
